<resources>
    <string name="app_name">AppMulta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulofragmentoinicio">INICIO</string>
    <string name="titulofragmentomultas">REVISA TUS MULTAS</string>
    <string name="titulofragmentopagos">REALIZA TUS PAGOS</string>
    <string name="tituloactualizar">ACTUALIZA TUS DATOS</string>
    <string name="titulologin">PAGOS MUNICIPALES</string>
    <string name="valetusuario">USUARIO</string>
    <string name="tituloacceder">ACCEDER</string>
    <string name="titulocontraseñaolvidada">¿OLVIDASTE LA CONTRASEÑA?</string>
    <string name="titulonotienescuenta">¿NO TIENES CUENTA?</string>
    <string name="tituloregistrate">REGISTRATE</string>
    <string name="hintusuario">INGRESA TU USUARIO</string>
    <string name="hintclave">INGRESA TU CONTRASEÑA</string>
    <string name="botonregistro">REGISTRARSE</string>
    <string name="titulonombre">INGRESA TU NOMBRE</string>
    <string name="tituloapellido">INGRESA TU APELLIDO</string>
    <string name="titulodireccion">INGRESA TU DIRECCION\n</string>
    <string name="titulotelefono">INGRESA TU TELEFONO</string>
    <string name="tituloemail">INGRESA TU EMAIL</string>
    <string name="tituloclave">INGRESA TU CONTRASEÑA</string>
    <string name="txtclave2">CONFIRMAR CONTRASEÑA</string>
    <string name="volverlogin">REGRESAR AL LOGIN</string>
    <string name="tltcardserie">Nro Serie</string>
    <string name="titulovermulta">VER MULTA</string>
    <string name="tltbien">"BIENVENIDO "</string>
    <string name="titulobbb">A LA NUEVA APP DE PAGOS</string>
    <string name="tltbbbbb">"DE LA: "</string>
    <string name="titulosalir">SALIR</string>
    <string name="tltvermulta">ACA PUEDES CVER LA MULTA\n</string>
    <string name="volveramultas">VOLVER A MULTAS</string>
    <string name="titulovolver">VOLVER A MULTAS</string>
    <string name="tltactualziatusdatos">ACTUALIZA TUS DATOS</string>
    <string name="actnombre">NOMBRE\n\n</string>
    <string name="actapellido">APELLIDOS</string>
    <string name="actdireccion">DIRECCION</string>
    <string name="acttelefono">TELEFONO</string>
    <string name="actemail">EMAIL</string>
    <string name="actcontraseña">CONTRASEÑA</string>
    <string name="actcontraseña2">CONFIRMA TU CONTRASEÑA</string>
    <string name="btnactu">ACTUALIZAR</string>
    <string name="tltpagomulta">PAGAR MULTA</string>
    <string name="tltpagoboton">PAGAR MULTA</string>
    <string name="tltpagarmulta">DEBITO O CREDITO</string>
    <string name="tltpagotarjeta">PAGAR</string>
    <string name="ttlvolve">VOLVER</string>
    <string name="LogOut" />
    <string name="tltlogout">LogOut</string>
</resources>