<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inicioFragment"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/titulofragmentoinicio" />

        <item
            android:id="@+id/multasFragment"
            android:icon="@drawable/baseline_find_in_page_24"
            android:title="@string/titulofragmentomultas" />

        <item
            android:id="@+id/pagosFragment"
            android:icon="@drawable/baseline_request_page_24"
            android:title="@string/titulofragmentopagos" />

        <item
            android:id="@+id/actualizarDatosFragment"
            android:icon="@drawable/baseline_autorenew_24"
            android:title="@string/tituloactualizar" />
        <item
            android:id="@+id/salir"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/titulosalir" />

    </group>
</menu>