<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/inicioFragment">
    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.example.appmulta.view.fragments.InicioFragment"
        android:label="@string/titulofragmentoinicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/multasFragment"
        android:name="com.example.appmulta.view.fragments.MultasFragment"
        android:label="@string/titulofragmentomultas"
        tools:layout="@layout/fragment_multas" />

    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.example.appmulta.view.fragments.PagosFragment"
        android:label="@string/titulofragmentopagos"
        tools:layout="@layout/fragment_pagos" />

    <fragment
        android:id="@+id/actualizarDatosFragment"
        android:name="com.example.appmulta.view.fragments.ActualizarDatosFragment"
        android:label="@string/tituloactualizar"
        tools:layout="@layout/fragment_actualizar_datos" />


</navigation>